--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
+    "@vercel/analytics": "^1.6.1",
     "astro": "^5.16.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
