--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ pnpm-debug.log*
 
 # jetbrains setting folder
 .idea/
+
+# planning documents - DO NOT COMMIT
+IMPROVEMENT_PLAN.md
+TODO.md
+NOTES.md
