--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "",
+  "name": "portfolio-v2",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.1.6",
+    "@astrojs/sitemap": "^3.7.0",
     "@astrojs/tailwind": "^5.1.5",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dropdown-menu": "^2.1.5",
